batch-mode/ai-json-template-derive/tests/trybuild_justification/fail_justification_missing_serde.stderr
error[E0277]: the trait bound `for<'a> MissingSerdeField: _::_serde::Deserialize<'a>` is not satisfied
  --> tests/trybuild_justification/fail_justification_missing_serde.rs:21:8
   |
21 | struct MissingSerdeField {
   |        ^^^^^^^^^^^^^^^^^ the trait `for<'a> _::_serde::Deserialize<'a>` is not implemented for `MissingSerdeField`
   |
   = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `MissingSerdeField` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `_::_serde::Deserialize<'de>`:
             &'a Path
             &'a [u8]
             &'a str
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
           and $N others
note: required by a bound in `ai_json_template::AiJsonTemplate`
  --> $WORKSPACE/ai-json-template/src/ai_json_template.rs
   |
   | pub trait AiJsonTemplate
   |           -------------- required by a bound in this trait
...
   | + for<'a> Deserialize<'a>
   |   ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AiJsonTemplate`

error[E0277]: the trait bound `MissingSerdeField: _::_serde::Serialize` is not satisfied
  --> tests/trybuild_justification/fail_justification_missing_serde.rs:21:8
   |
21 | struct MissingSerdeField {
   |        ^^^^^^^^^^^^^^^^^ the trait `_::_serde::Serialize` is not implemented for `MissingSerdeField`
   |
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `MissingSerdeField` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `_::_serde::Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
note: required by a bound in `ai_json_template::AiJsonTemplate`
  --> $WORKSPACE/ai-json-template/src/ai_json_template.rs
   |
   | pub trait AiJsonTemplate
   |           -------------- required by a bound in this trait
...
   | + Serialize
   |   ^^^^^^^^^ required by this bound in `AiJsonTemplate`

error[E0277]: the trait bound `MissingSerdeField: SaveToFile` is not satisfied
  --> tests/trybuild_justification/fail_justification_missing_serde.rs:21:8
   |
21 | struct MissingSerdeField {
   |        ^^^^^^^^^^^^^^^^^ the trait `SaveToFile` is not implemented for `MissingSerdeField`
   |
   = help: the following other types implement trait `SaveToFile`:
             HashMap<K, V>
             Vec<T>
             std::string::String
note: required by a bound in `ai_json_template::AiJsonTemplate`
  --> $WORKSPACE/ai-json-template/src/ai_json_template.rs
   |
   | pub trait AiJsonTemplate
   |           -------------- required by a bound in this trait
...
   | + SaveToFile<Error=SaveLoadError>
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AiJsonTemplate`

error[E0277]: the trait bound `MissingSerdeField: LoadFromFile` is not satisfied
  --> tests/trybuild_justification/fail_justification_missing_serde.rs:21:8
   |
21 | struct MissingSerdeField {
   |        ^^^^^^^^^^^^^^^^^ the trait `LoadFromFile` is not implemented for `MissingSerdeField`
   |
   = help: the following other types implement trait `LoadFromFile`:
             HashMap<K, V>
             Vec<T>
             std::string::String
note: required by a bound in `ai_json_template::AiJsonTemplate`
  --> $WORKSPACE/ai-json-template/src/ai_json_template.rs
   |
   | pub trait AiJsonTemplate
   |           -------------- required by a bound in this trait
...
   | + LoadFromFile
   |   ^^^^^^^^^^^^ required by this bound in `AiJsonTemplate`

error[E0277]: the trait bound `for<'a> MissingSerdeField: _::_serde::Deserialize<'a>` is not satisfied
  --> tests/trybuild_justification/fail_justification_missing_serde.rs:21:8
   |
21 | struct MissingSerdeField {
   |        ^^^^^^^^^^^^^^^^^ the trait `for<'a> _::_serde::Deserialize<'a>` is not implemented for `MissingSerdeField`
   |
   = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `MissingSerdeField` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `_::_serde::Deserialize<'de>`:
             &'a Path
             &'a [u8]
             &'a str
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
           and $N others
   = note: required for `MissingSerdeField` to implement `ai_json_template::AiJsonTemplate`
note: required by a bound in `ai_json_template::AiJsonTemplateWithJustification`
  --> $WORKSPACE/ai-json-template/src/ai_json_template.rs
   |
   | pub trait AiJsonTemplateWithJustification: AiJsonTemplate {
   |                                            ^^^^^^^^^^^^^^ required by this bound in `AiJsonTemplateWithJustification`

error[E0277]: the trait bound `MissingSerdeField: _::_serde::Serialize` is not satisfied
  --> tests/trybuild_justification/fail_justification_missing_serde.rs:21:8
   |
21 | struct MissingSerdeField {
   |        ^^^^^^^^^^^^^^^^^ the trait `_::_serde::Serialize` is not implemented for `MissingSerdeField`
   |
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `MissingSerdeField` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `_::_serde::Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
   = note: required for `MissingSerdeField` to implement `ai_json_template::AiJsonTemplate`
note: required by a bound in `ai_json_template::AiJsonTemplateWithJustification`
  --> $WORKSPACE/ai-json-template/src/ai_json_template.rs
   |
   | pub trait AiJsonTemplateWithJustification: AiJsonTemplate {
   |                                            ^^^^^^^^^^^^^^ required by this bound in `AiJsonTemplateWithJustification`

error[E0277]: the trait bound `MissingSerdeField: SaveToFile` is not satisfied
  --> tests/trybuild_justification/fail_justification_missing_serde.rs:21:8
   |
21 | struct MissingSerdeField {
   |        ^^^^^^^^^^^^^^^^^ the trait `SaveToFile` is not implemented for `MissingSerdeField`
   |
   = help: the following other types implement trait `SaveToFile`:
             HashMap<K, V>
             Vec<T>
             std::string::String
   = note: required for `MissingSerdeField` to implement `ai_json_template::AiJsonTemplate`
note: required by a bound in `ai_json_template::AiJsonTemplateWithJustification`
  --> $WORKSPACE/ai-json-template/src/ai_json_template.rs
   |
   | pub trait AiJsonTemplateWithJustification: AiJsonTemplate {
   |                                            ^^^^^^^^^^^^^^ required by this bound in `AiJsonTemplateWithJustification`

error[E0277]: the trait bound `MissingSerdeField: LoadFromFile` is not satisfied
  --> tests/trybuild_justification/fail_justification_missing_serde.rs:21:8
   |
21 | struct MissingSerdeField {
   |        ^^^^^^^^^^^^^^^^^ the trait `LoadFromFile` is not implemented for `MissingSerdeField`
   |
   = help: the following other types implement trait `LoadFromFile`:
             HashMap<K, V>
             Vec<T>
             std::string::String
   = note: required for `MissingSerdeField` to implement `ai_json_template::AiJsonTemplate`
note: required by a bound in `ai_json_template::AiJsonTemplateWithJustification`
  --> $WORKSPACE/ai-json-template/src/ai_json_template.rs
   |
   | pub trait AiJsonTemplateWithJustification: AiJsonTemplate {
   |                                            ^^^^^^^^^^^^^^ required by this bound in `AiJsonTemplateWithJustification`
